istio-gateway/kiali-virtualgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-service
  namespace: istio-system
spec:
  hosts:
  - kiali.app.williambrittonjr.com
  - kiali.kube.hyyercode.com
  gateways:
  - istio-ingress/ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 20001
        host: kiali.istio-system.svc.cluster.local
